force-app/main/default/objects/Case/fields/Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health__c</fullName>
    <label>Mental Health</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Discussed</fullName>
                <default>true</default>
                <label>Not Discussed</label>
            </value>
            <value>
                <fullName>None Reported</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Depression</fullName>
            </value>
            <value>
                <fullName>PTSD</fullName>
            </value>
            <value>
                <fullName>Paranoia</fullName>
            </value>
            <value>
                <fullName>Self-Harm/Suicidal Ideation</fullName>
            </value>
            <value>
                <fullName>Trouble Coping</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Disorientation</fullName>
                <isActive>false</isActive>
                <label>Disorientation</label>
            </value>
            <value>
                <fullName>Sexually Inappropriate Behavior</fullName>
                <isActive>false</isActive>
                <label>Sexually Inappropriate Behavior</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>