force-app/main/default/objects/Case/fields/No_Community_Supports_Barriers__c.field-meta.xml
<CustomField>
    <fullName>No_Community_Supports_Barriers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Community supports barriers were discussed and none were identified</inlineHelpText>
    <label>No Community Supports Barriers</label>
    <type>Checkbox</type>
</CustomField>