force-app/main/default/objects/Case/fields/No_Financial_Barriers__c.field-meta.xml
<CustomField>
    <fullName>No_Financial_Barriers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Financial barriers were discussed and none were identified</inlineHelpText>
    <label>No Financial Barriers</label>
    <type>Checkbox</type>
</CustomField>