force-app/main/default/objects/Case/fields/No_Health_Barriers__c.field-meta.xml
<CustomField>
    <fullName>No_Health_Barriers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Health barriers were discussed and none were identified</inlineHelpText>
    <label>No Health Barriers</label>
    <type>Checkbox</type>
</CustomField>