force-app/main/default/objects/Case/fields/No_Housing_Barriers__c.field-meta.xml
<CustomField>
    <fullName>No_Housing_Barriers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Housing barriers were discussed and none were identified</inlineHelpText>
    <label>No Housing Barriers</label>
    <type>Checkbox</type>
</CustomField>