force-app/main/default/objects/Case/fields/Notes_from_Contact__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Contact__c</fullName>
    <description>This field is used by FormStack - do not change the Field Name with out coordinating with a change in FormStack</description>
    <inlineHelpText>Use bullet points and keep to a minimum
Can use to further explain &quot;other&quot; from drop downs</inlineHelpText>
    <label>Case Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>