force-app/main/default/objects/Case/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Use to record other materials sent to professional</description>
    <inlineHelpText>Use this field to record the number of &quot;other&quot; materials sent AND note the specific name of the material in the Notes from Contact field above.</inlineHelpText>
    <label>Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>