force-app/main/default/objects/Case/fields/Other_Provided_With_Explained__c.field-meta.xml
<CustomField>
    <fullName>Other_Provided_With_Explained__c</fullName>
    <inlineHelpText>Use this text box to further describe what &quot;other&quot; you provided to the contact</inlineHelpText>
    <label>&quot;Other&quot; Provided With Explained</label>
    <type>TextArea</type>
</CustomField>