force-app/main/default/objects/Case/fields/Pediatric_mTBI_Flyer__c.field-meta.xml
<CustomField>
    <fullName>Pediatric_mTBI_Flyer__c</fullName>
    <inlineHelpText>Taking Care of Your Child When Their Head&apos;s Been Hurt</inlineHelpText>
    <label>Pediatric mTBI Flyers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>