force-app/main/default/objects/Case/fields/Physical_Health__c.field-meta.xml
<CustomField>
    <fullName>Physical_Health__c</fullName>
    <label>Physical Health</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Discussed</fullName>
                <default>true</default>
                <label>Not Discussed</label>
            </value>
            <value>
                <fullName>None Reported</fullName>
            </value>
            <value>
                <fullName>Balance</fullName>
            </value>
            <value>
                <fullName>Disorders of Consciousness</fullName>
            </value>
            <value>
                <fullName>Swallowing Difficulties</fullName>
            </value>
            <value>
                <fullName>Fatigue</fullName>
            </value>
            <value>
                <fullName>Fainting/Dizziness</fullName>
            </value>
            <value>
                <fullName>Headaches</fullName>
            </value>
            <value>
                <fullName>Limb weakness or paralysis</fullName>
            </value>
            <value>
                <fullName>Pain</fullName>
            </value>
            <value>
                <fullName>Taste/Smell</fullName>
            </value>
            <value>
                <fullName>Seizures</fullName>
            </value>
            <value>
                <fullName>Sleep</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>