force-app/main/default/objects/Case/fields/Professional_Guide__c.field-meta.xml
<CustomField>
    <fullName>Professional_Guide__c</fullName>
    <inlineHelpText>Professional Guide to Working with People with Brain Injury</inlineHelpText>
    <label>Professional Guide</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>