force-app/main/default/objects/Case/fields/Provided_With__c.field-meta.xml
<CustomField>
    <fullName>Provided_With__c</fullName>
    <label>Provided With</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advocacy 1:1 Training (BIRN)</fullName>
            </value>
            <value>
                <fullName>Area Agency on Aging*</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Beacon House*</fullName>
            </value>
            <value>
                <fullName>BI Articles</fullName>
            </value>
            <value>
                <fullName>Brain Injury Connections of the Shenandoah Valley, Inc.</fullName>
            </value>
            <value>
                <fullName>Brain Injury Services Inc*</fullName>
            </value>
            <value>
                <fullName>Brain Injury Services of Southwest VA*</fullName>
            </value>
            <value>
                <fullName>Bridge Line</fullName>
            </value>
            <value>
                <fullName>CIL</fullName>
            </value>
            <value>
                <fullName>Community Brain Injury Services*</fullName>
            </value>
            <value>
                <fullName>Crossroads to Brain Injury Recovery*</fullName>
                <label>Crossroads to Brain Injury Recovery*(inactive effective 7/5/18)</label>
            </value>
            <value>
                <fullName>DARS- CRCMS</fullName>
            </value>
            <value>
                <fullName>DARS- Other</fullName>
            </value>
            <value>
                <fullName>DARS- Voc</fullName>
            </value>
            <value>
                <fullName>DLC</fullName>
            </value>
            <value>
                <fullName>DMAS</fullName>
            </value>
            <value>
                <fullName>DSS</fullName>
            </value>
            <value>
                <fullName>Educational Resources</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Legislator</fullName>
            </value>
            <value>
                <fullName>Medicaid Waiver</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>No Limits Eastern Shore*</fullName>
            </value>
            <value>
                <fullName>Other BIA Affiliate</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
            <value>
                <fullName>Professionals</fullName>
            </value>
            <value>
                <fullName>Recreational Services</fullName>
            </value>
            <value>
                <fullName>Rehab Program</fullName>
            </value>
            <value>
                <fullName>Resource Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>