force-app/main/default/objects/Case/fields/Reason_s_for_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reason_s_for_Contact__c</fullName>
    <inlineHelpText>Refer to reason for contact definitions listed on Pdrive/Programs/I &amp; R/Reason for contacts definitions.
Limit to 3 choices.</inlineHelpText>
    <label>Reason(s) for Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Caregiver Coping</fullName>
            </value>
            <value>
                <fullName>Cognition</fullName>
            </value>
            <value>
                <fullName>Community Resources</fullName>
            </value>
            <value>
                <fullName>Concussion</fullName>
            </value>
            <value>
                <fullName>COVID-19 related</fullName>
            </value>
            <value>
                <fullName>Disorders of Consciousness</fullName>
            </value>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>General BI Information</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Long Term Care</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>PWBI Coping</fullName>
            </value>
            <value>
                <fullName>Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Self Advocacy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>