force-app/main/default/objects/Case/fields/Registry__c.field-meta.xml
<CustomField>
    <fullName>Registry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registry</label>
    <type>Checkbox</type>
</CustomField>