force-app/main/default/objects/Case/fields/Registry_Card_Date__c.field-meta.xml
<CustomField>
    <fullName>Registry_Card_Date__c</fullName>
    <description>This is the date that is stamped on the registry card and/or the date that is on the letter from DARS.</description>
    <inlineHelpText>This is the date that is stamped on the registry card and/or the date that is on the letter from DARS.</inlineHelpText>
    <label>Registry Card Date</label>
    <type>Date</type>
</CustomField>