force-app/main/default/objects/Case/fields/Second_Follow_Up_Call__c.field-meta.xml
<CustomField>
    <fullName>Second_Follow_Up_Call__c</fullName>
    <label>Second Follow Up Call</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>