force-app/main/default/objects/Case/fields/Self_Determination_Description__c.field-meta.xml
<CustomField>
    <fullName>Self_Determination_Description__c</fullName>
    <label>Self-Determination Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>