force-app/main/default/objects/Case/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <inlineHelpText>Enter the date of the response to the email, the call, or the registry card. If verbal only, enter when you send info.</inlineHelpText>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>