force-app/main/default/objects/Case/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <inlineHelpText>Enter the date of the email, the date of call, or the date stamped on the registry card. For I &amp; R-when they contact us;  for first IRFA, when you talk to them.</inlineHelpText>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>