force-app/main/default/objects/Case/fields/Social__c.field-meta.xml
<CustomField>
    <fullName>Social__c</fullName>
    <label>Social</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Discussed</fullName>
                <default>true</default>
                <label>Not Discussed</label>
            </value>
            <value>
                <fullName>None Reported</fullName>
            </value>
            <value>
                <fullName>Family Relations Difficulty</fullName>
            </value>
            <value>
                <fullName>Isolation</fullName>
            </value>
            <value>
                <fullName>Trouble with Social Cues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>