force-app/main/default/objects/Case/fields/Spanish_Adult_mTBI_Flyers__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Adult_mTBI_Flyers__c</fullName>
    <inlineHelpText>Taking Care of Yourself After Your Head&apos;s Been Hurt in Spanish</inlineHelpText>
    <label>Spanish Adult mTBI Flyers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>