force-app/main/default/objects/Case/fields/Spanish_Pediatric_mTBI_Flyers__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Pediatric_mTBI_Flyers__c</fullName>
    <inlineHelpText>Taking Care of Your Child When Their Head&apos;s Been Hurt in Spanish</inlineHelpText>
    <label>Spanish Pediatric mTBI Flyers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>