force-app/main/default/objects/Case/fields/Sports_Concussion_is_a_BI__c.field-meta.xml
<CustomField>
    <fullName>Sports_Concussion_is_a_BI__c</fullName>
    <label>Sports Concussion is a BI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>