force-app/main/default/objects/Case/fields/State_Funded__c.field-meta.xml
<CustomField>
    <fullName>State_Funded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State Funded</label>
    <type>Checkbox</type>
</CustomField>