force-app/main/default/objects/Case/fields/Support_Group_List__c.field-meta.xml
<CustomField>
    <fullName>Support_Group_List__c</fullName>
    <label>Support Group List</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>