force-app/main/default/objects/Case/fields/Type_of_Brain_Injury__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Brain_Injury__c</fullName>
    <label>Type of Brain Injury</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Traumatic Brain Injury</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Traumatic</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>