force-app/main/default/objects/Case/fields/Type_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Service__c</fullName>
    <label>Type of Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Resource Request</fullName>
            </value>
            <value>
                <fullName>NeuroResource Facilitation (NRF)</fullName>
            </value>
            <value>
                <fullName>Case Discussion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>