force-app/main/default/objects/Case/fields/Unmet_Needs_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Unmet_Needs_Discussed__c</fullName>
    <inlineHelpText>Refer to definitions of the unmet needs on the Pdrive/Programs/Unmet Needs &amp; Definitions for SalesForce</inlineHelpText>
    <label>Unmet Needs Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Community Support Services</fullName>
            </value>
            <value>
                <fullName>Education-Accommodations</fullName>
            </value>
            <value>
                <fullName>Education-IEP</fullName>
            </value>
            <value>
                <fullName>Education-Transition</fullName>
            </value>
            <value>
                <fullName>Education-504 Plan</fullName>
            </value>
            <value>
                <fullName>Financial/None</fullName>
            </value>
            <value>
                <fullName>Financial/Hardship</fullName>
            </value>
            <value>
                <fullName>Health Insurance-None</fullName>
            </value>
            <value>
                <fullName>Health Insurance-Under insured</fullName>
            </value>
            <value>
                <fullName>Housing-At Risk</fullName>
            </value>
            <value>
                <fullName>Housing-Congregate Living</fullName>
            </value>
            <value>
                <fullName>Housing-Homeless</fullName>
            </value>
            <value>
                <fullName>Housing-Inaccessible</fullName>
            </value>
            <value>
                <fullName>Housing-Nursing Facility</fullName>
            </value>
            <value>
                <fullName>Justice Involved-Charged</fullName>
            </value>
            <value>
                <fullName>Justice Involved-Incarcerated</fullName>
            </value>
            <value>
                <fullName>Justice Involved-Paroled</fullName>
            </value>
            <value>
                <fullName>Justice Involved-Probation</fullName>
            </value>
            <value>
                <fullName>Mental Health Services Unavailable</fullName>
            </value>
            <value>
                <fullName>Neurobehavioral-At Risk of Discharge/Out of State Placement</fullName>
            </value>
            <value>
                <fullName>Neurobehavioral-Discharged due to neurobehavioral issues</fullName>
            </value>
            <value>
                <fullName>Neurobehavioral-Out of State Placement due to behavioral issues</fullName>
            </value>
            <value>
                <fullName>Neurobehavioral-Outpatient Services not available</fullName>
            </value>
            <value>
                <fullName>S.U.D. Tx Options Unavailable</fullName>
            </value>
            <value>
                <fullName>Social Isolation</fullName>
            </value>
            <value>
                <fullName>Sub-Acute Rehab</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Other (explain in text box)</fullName>
            </value>
            <value>
                <fullName>zz-do not use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>