force-app/main/default/objects/Case/fields/Unmet_Needs_Explained__c.field-meta.xml
<CustomField>
    <fullName>Unmet_Needs_Explained__c</fullName>
    <inlineHelpText>if you chose &quot;other&quot; as an unmet need, please explain in this field</inlineHelpText>
    <label>&quot;Other&quot; Unmet Needs Explained</label>
    <type>TextArea</type>
</CustomField>