force-app/main/default/objects/Case/fields/What_info_are_they_looking_for__c.field-meta.xml
<CustomField>
    <fullName>What_info_are_they_looking_for__c</fullName>
    <inlineHelpText>This field is only used to record info entered on the web based RRF (online Resource Request Form).  It is left blank for all other contacts</inlineHelpText>
    <label>What info are they looking for</label>
    <type>TextArea</type>
</CustomField>