force-app/main/default/objects/Case/recordTypes/Contact_Us_Form.recordType-meta.xml
<RecordType>
    <fullName>Contact_Us_Form</fullName>
    <active>false</active>
    <businessProcess>I%26R</businessProcess>
    <description>Online Contact Us Form submissions</description>
    <label>Contact Us Form</label>
</RecordType>