force-app/main/default/objects/Case/recordTypes/First_IRFA.recordType-meta.xml
<RecordType>
    <fullName>First_IRFA</fullName>
    <active>false</active>
    <businessProcess>I%26R</businessProcess>
    <description>Use this record type to record information from the first IRFA program follow-up contact</description>
    <label>First IRFA</label>
</RecordType>