force-app/main/default/objects/Case/recordTypes/Information_and_Referral.recordType-meta.xml
<RecordType>
    <fullName>Information_and_Referral</fullName>
    <active>true</active>
    <businessProcess>I%26R</businessProcess>
    <description>Use this record type for all I &amp; R calls/contacts</description>
    <label>Information and Referral</label>
</RecordType>