force-app/main/default/objects/Case/recordTypes/Professional_Outreach.recordType-meta.xml
<RecordType>
    <fullName>Professional_Outreach</fullName>
    <active>true</active>
    <businessProcess>I%26R</businessProcess>
    <description>Primarily use for bulk mailing to professionals of BIAV publications</description>
    <label>Professional Outreach</label>
</RecordType>