force-app/main/default/objects/Case/recordTypes/Second_IRFA.recordType-meta.xml
<RecordType>
    <fullName>Second_IRFA</fullName>
    <active>false</active>
    <businessProcess>I%26R</businessProcess>
    <description>Use this record type to track information from the second follow along phone call</description>
    <label>Second IRFA</label>
</RecordType>