force-app/main/default/objects/Case/validationRules/Community_Supports_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Community_Supports_Checkbox</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Community_Supports_Not_Discussed__c = TRUE,
    OR(
        Community_Supports_Barriers__c = TRUE
    )
)</errorConditionFormula>
    <errorDisplayField>Community_Supports_Barriers__c</errorDisplayField>
    <errorMessage>If &quot;Community Supports Not Discussed&quot; is checked, &quot;Community Supports Barriers&quot; cannot be checked. Choose one.</errorMessage>
</ValidationRule>