force-app/main/default/objects/Case/validationRules/Financial_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Financial_Checkbox</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Financial_Not_Discussed__c = TRUE,
    OR(
        Financial_Barriers__c = TRUE
    )
)</errorConditionFormula>
    <errorDisplayField>Financial_Barriers__c</errorDisplayField>
    <errorMessage>If &quot;Financial Not Discussed&quot; is checked, &quot;Financial Barriers&quot; cannot be checked. Choose one.</errorMessage>
</ValidationRule>