force-app/main/default/objects/Case/validationRules/Health_Barriers_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Health_Barriers_Checkbox</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Health_Not_Discussed__c = TRUE,
    OR(
        Health_Barriers__c = TRUE
    )
)</errorConditionFormula>
    <errorDisplayField>Health_Barriers__c</errorDisplayField>
    <errorMessage>If &quot;Health Not Discussed&quot; is checked, &quot;Health Barriers&quot; cannot be checked. Choose one.</errorMessage>
</ValidationRule>