force-app/main/default/objects/Case/validationRules/Housing_Barrier_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Housing_Barrier_Checkbox</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Housing_Not_Discussed__c = TRUE,
    OR(
        Housing_Barriers__c = TRUE
    )
)</errorConditionFormula>
    <errorDisplayField>Housing_Barriers__c</errorDisplayField>
    <errorMessage>If &quot;Housing Not Discussed&quot; is checked, &quot;Housing Barriers&quot; cannot be checked. Choose one.</errorMessage>
</ValidationRule>