force-app/main/default/objects/Case/listViews/All_Web_Cases.listView-meta.xml
<ListView>
    <fullName>All_Web_Cases</fullName>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Service_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Web Cases</label>
</ListView>