force-app/main/default/objects/Case/listViews/AllCases.listView-meta.xml
<ListView>
    <fullName>AllCases</fullName>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Service_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
</ListView>