force-app/main/default/objects/Case/listViews/BIAV_Formstack_for_Case_Case.listView-meta.xml
<ListView>
    <fullName>BIAV_Formstack_for_Case_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BIAV Formstack for Case</label>
    <queue>BIAV_Formstack_for_Case</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>