force-app/main/default/objects/Case/listViews/Cases_and_Unmet_Needs.listView-meta.xml
<ListView>
    <fullName>Cases_and_Unmet_Needs</fullName>
    <columns>NAME</columns>
    <columns>Service_Start_Date__c</columns>
    <columns>Unmet_Needs_Discussed__c</columns>
    <columns>Registry__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2019</value>
    </filters>
    <filters>
        <field>Unmet_Needs_Discussed__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
    </filters>
    <filters>
        <field>Registry__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Cases and Unmet Needs</label>
</ListView>